Mobile spacing fixes

--- a/src/App.css
+++ b/src/App.css
@@ -34,12 +34,12 @@
   
   .section {
     padding: 4rem 2rem;
-    scroll-margin-top: 80px;
+    scroll-margin-top: 60px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 80px;
+    padding-top: 60px;
   }
   
   .section__title {
@@ -156,8 +156,8 @@
   @media (max-width: 600px) {
     .section {
       padding: 3rem 1.5rem;
-      padding-top: 60px;
-      scroll-margin-top: 60px;
+      padding-top: 50px;
+      scroll-margin-top: 50px;
     }
 
     .section__title {
